--- a/LBL-Jupyter-talk.html
+++ b/LBL-Jupyter-talk.html
@@ -27,34 +27,35 @@
 <body>
 <div class="reveal">
 <div class="slides">
-<section id="sec-title-slide"><h1 class="title">Tech Dive: Jupyter at LSST</h1><h2 class="author">Adam Thornton</h2><p class="date">Created: 2019-05-31 Fri 19:49</p>
+<section id="sec-title-slide"><h1 class="title">Tech Dive: Jupyter at LSST</h1><h2 class="author">Adam Thornton</h2><p class="date">Created: 2019-06-02 Sun 12:11</p>
 </section>
 <section>
 <section id="slide-sec-">
-<h2 id="org9bd3707">Links</h2>
+<h2 id="org6e1fafc">Links</h2>
 <p>
-<a href="https://github.com/lsst-sqre/Jupyter-PCW-2019.git">This talk</a>.
+<a href="https://github.com/lsst-sqre/Jupyter-PCW-2019.git">This talk</a>: <a href="https://github.com/lsst-sqre/Jupyter-PCW-2019.git">https://github.com/lsst-sqre/Jupyter-PCW-2019.git</a>.
 </p>
 
 <p>
-<a href="https://athornton.github.io/Jupyter-PCW-2019">This talk, rendered</a>.
+<a href="https://athornton.github.io/Jupyter-PCW-2019">This talk, rendered</a>: <a href="https://athornton.github.io/Jupyter-PCW-2019">https://athornton.github.io/Jupyter-PCW-2019</a>.
 </p>
 
 <p>
-The <a href="https://github.com/lsst-sqre/nublado.git">Notebook Aspect of the LSST Science Platform</a>, where all the
-examples are from.
+The <a href="https://github.com/lsst-sqre/nublado.git">Notebook Aspect of the LSST Science Platform</a>:
+<a href="https://github.com/lsst-sqre/nublado.git">https://github.com/lsst-sqre/nublado.git</a> (example sources).
 </p>
+
 </section>
 </section>
 <section>
 <section id="slide-sec-">
-<h2 id="org5c23b00">LSST</h2>
-<div class="outline-text-2" id="text-org5c23b00">
+<h2 id="org441b5bd">LSST</h2>
+<div class="outline-text-2" id="text-org441b5bd">
 </div></section>
 </section>
 <section>
 <section id="slide-sec-">
-<h3 id="orga4d4864">Feeds and Speeds</h3>
+<h3 id="org531949e">Feeds and Speeds</h3>
 <p>
 <a href="https://www.lsst.org/scientists/keynumbers">This</a> is the usual overview of what the LSST is going to be doing, and
 how much of it there is.
@@ -64,7 +65,7 @@ how much of it there is.
 </section>
 <section>
 <section id="slide-sec-">
-<h3 id="org809d70d">Notebook Environment (AKA "nublado")</h3>
+<h3 id="orgce07c72">Notebook Environment (AKA "nublado")</h3>
 <p>
 This is the LSST Science Platform Interactive Notebook Component.
 Basically, it's a way of letting scientists quickly iterate through
@@ -76,18 +77,17 @@ resources investigating.
 My <a href="https://youtu.be/Xc0rUVznx1k?list=PL055Epbe6d5b572IRmYAHkUgcq3y6K3Ae">talk at JupyterCon 2018</a> (<a href="https://athornton.github.io/JupyterCon-2018-talk">slides</a>) is not a bad overview, if I do say
 so myself.
 </p>
-
 </section>
 </section>
 <section>
 <section id="slide-sec-">
-<h2 id="orgf762c4c">Fundamental assumptions</h2>
-<div class="outline-text-2" id="text-orgf762c4c">
+<h2 id="orgfe0f7cc">Fundamental assumptions</h2>
+<div class="outline-text-2" id="text-orgfe0f7cc">
 </div></section>
 </section>
 <section>
 <section id="slide-sec-">
-<h3 id="orga3c4186">Kubernetes is the right level of abstraction</h3>
+<h3 id="orgd203da1">Kubernetes is the right level of abstraction</h3>
 <p>
 You're free to argue with me about this.
 </p>
@@ -98,7 +98,7 @@ If you do, you're wrong.
 
 </section>
 <section id="slide-sec-">
-<h4 id="orgb26178e">Containerization</h4>
+<h4 id="org22b0189">Containerization</h4>
 <p>
 Abstraction that lets you care about the application software rather
 than the lower layers.
@@ -110,7 +110,7 @@ We're using Docker.
 
 </section>
 <section id="slide-sec-">
-<h4 id="orgc6568aa">Composability</h4>
+<h4 id="org1bacee4">Composability</h4>
 <p>
 Kubernetes abstractions (e.g. the service) are designed such that we can
 load-balance and (in some cases) get HA without having to work very hard
@@ -125,9 +125,9 @@ This is where Kubernetes is magnificent.
 
 </section>
 <section id="slide-sec-">
-<h4 id="org41111d9">Ubiquity</h4>
-<div class="outline-text-4" id="text-org41111d9">
-</div><ul class="org-ul"><li><a id="org5386d77"></a>If you are not a data center service provider<br /><p>
+<h4 id="orgcb3f5e1">Ubiquity</h4>
+<div class="outline-text-4" id="text-orgcb3f5e1">
+</div><ul class="org-ul"><li><a id="orgf9ccfad"></a>If you are not a data center service provider<br /><p>
 Demand your service provider give you a Kubernetes interface.  The major
 public clouds already do.
 </p>
@@ -136,7 +136,7 @@ public clouds already do.
 </section>
 <section ></li>
 
-<li><a id="org8476b5e"></a>If you are a data center service provider<br /><p>
+<li><a id="orgebffd05"></a>If you are a data center service provider<br /><p>
 You either already do provide a managed Kubernetes service or you're
 going to have to.  The longer you wait the more it will hurt.
 </p>
@@ -147,7 +147,7 @@ Again, you can argue with me.  Again, you're wrong.
 
 </section>
 <section id="slide-sec-">
-<h4 id="org44a44c6">Orchestrateable</h4>
+<h4 id="org6d1ec84">Orchestrateable</h4>
 <p>
 Kustomize, Terraform, Helm, or roll-your own.  Each of the first three
 has advantages.
@@ -157,7 +157,7 @@ has advantages.
 </section>
 <section>
 <section id="slide-sec-">
-<h3 id="orgc3a11d1">JupyterHub</h3>
+<h3 id="orgf4f2146">JupyterHub</h3>
 <p>
 Why write your own spawner?  I haven't heard a convincing reason.
 </p>
@@ -166,7 +166,7 @@ Why write your own spawner?  I haven't heard a convincing reason.
 </section>
 <section>
 <section id="slide-sec-">
-<h3 id="org4516edd">JupyterLab</h3>
+<h3 id="orgebe18c2">JupyterLab</h3>
 <p>
 No sense in starting, several years from Science First Light, with
 something that's already being supplanted.
@@ -182,7 +182,7 @@ for.  Encourage them to write those extensions or at least open issues.
 </section>
 <section>
 <section id="slide-sec-">
-<h2 id="orgef08c97">Jupyter Configuration</h2>
+<h2 id="org72b0b8d">Jupyter Configuration</h2>
 <ol>
 <li>Authentication</li>
 <li>Resource Control</li>
@@ -195,11 +195,11 @@ for.  Encourage them to write those extensions or at least open issues.
 </section>
 <section>
 <section id="slide-sec-">
-<h3 id="org3d1814b">Authentication</h3>
-<div class="outline-text-3" id="text-org3d1814b">
+<h3 id="orgc6f6bb1">Authentication</h3>
+<div class="outline-text-3" id="text-orgc6f6bb1">
 </div></section>
 <section id="slide-sec-">
-<h4 id="org97d56a6">Make it someone else's problem</h4>
+<h4 id="org7049fce">Make it someone else's problem</h4>
 <p>
 It's full of corner cases and harder than it looks.
 </p>
@@ -211,7 +211,7 @@ groups, and groups map to capabilities" won't work for you?
 
 </section>
 <section id="slide-sec-">
-<h4 id="orgde2c132">OAuth2 is nice</h4>
+<h4 id="org72c401f">OAuth2 is nice</h4>
 <p>
 Wide support, good JupyterHub support, easy to add new providers.
 </p>
@@ -222,7 +222,7 @@ Wide support, good JupyterHub support, easy to add new providers.
 
 </section>
 <section id="slide-sec-">
-<h4 id="org0aa0dfd">SSO</h4>
+<h4 id="org8d6584b">SSO</h4>
 <p>
 Custom header checking/injection in an Nginx ingress with a diversion
 through OAuth2 flow, followed by passing around JWT.
@@ -234,7 +234,7 @@ Our <a href="https://github.com/lsst-sqre/nublado/blob/master/proxy/kubernetes/i
 
 </section>
 <section id="slide-sec-">
-<h4 id="org2481f79">Better SSO</h4>
+<h4 id="org6dc9e00">Better SSO</h4>
 <p>
 CILogon+NCSA IDP supports association of identities, which is a nice
 feature.  See if your OAuth2 provider can do it.
@@ -249,11 +249,11 @@ logging on somewhere.
 </section>
 <section>
 <section id="slide-sec-">
-<h3 id="org1e68a03">Resource Control</h3>
-<div class="outline-text-3" id="text-org1e68a03">
+<h3 id="org249f19c">Resource Control</h3>
+<div class="outline-text-3" id="text-org249f19c">
 </div></section>
 <section id="slide-sec-">
-<h4 id="orgfc18a9d">Group Membership</h4>
+<h4 id="orgf706fff">Group Membership</h4>
 <p>
 A group is really a mapping to a set of capabilities.
 </p>
@@ -265,7 +265,7 @@ multiple group memberships for an identity.
 
 </section>
 <section id="slide-sec-">
-<h4 id="orgade73e2">Capabilities are equivalent to resource entitlement</h4>
+<h4 id="org39f3f6d">Capabilities are equivalent to resource entitlement</h4>
 <p>
 What a user is allowed to do is the union of the capabilities of each of
 their groups.
@@ -273,9 +273,9 @@ their groups.
 
 </section>
 <section id="slide-sec-">
-<h4 id="org2b4d26f">Namespace a user's resources in Kubernetes</h4>
-<div class="outline-text-4" id="text-org2b4d26f">
-</div><ul class="org-ul"><li><a id="org855946f"></a>Quotas<br /><p>
+<h4 id="org9085445">Namespace a user's resources in Kubernetes</h4>
+<div class="outline-text-4" id="text-org9085445">
+</div><ul class="org-ul"><li><a id="orgdd37e34"></a>Quotas<br /><p>
 CPU, RAM, and object count.
 </p>
 
@@ -286,7 +286,7 @@ Construct different quotas for different groups.
 </section>
 <section ></li>
 
-<li><a id="org85e111b"></a>Ease of cleanup<br /><p>
+<li><a id="org5dd0e0c"></a>Ease of cleanup<br /><p>
 Once you start constructing complex user environments, it's easy to
 leak.
 </p>
@@ -298,7 +298,7 @@ everything but PVs.
 
 </section>
 <section id="slide-sec-">
-<h4 id="orgc80e258">Time is a resource</h4>
+<h4 id="org9118736">Time is a resource</h4>
 <p>
 If you have a complex set of analysis tools, your images may be very
 large.  Ours are 16GB now.
@@ -311,8 +311,8 @@ This can take a very long time to pull.
 </section>
 <section >
 
-<ul class="org-ul"><li><a id="org210197e"></a>Prepuller<br /><p>
-Run something to continually pull some set of versions of your standard
+<ul class="org-ul"><li><a id="orgc68b2f4"></a>Prepuller<br /><p>
+Run <a href="https://github.com/lsst-sqre/nublado/tree/master/prepuller">something</a> to continually pull some set of versions of your standard
 images.  Couple with a CI system and by the time people show up in the
 morning, the new image is pulled.
 </p>
@@ -324,7 +324,7 @@ Cuts startup time from 10 minutes to 15 seconds for us.
 </section>
 <section ></li>
 
-<li><a id="org0945f70"></a>Build around your stack<br /><p>
+<li><a id="org98e9b1e"></a>Build around your stack<br /><p>
 Don't take a base JupyterLab and add your software to it if your
 software is large.
 </p>
@@ -335,9 +335,9 @@ Instead, add JupyterLab to your software.
 
 </section>
 <section id="slide-sec-">
-<h4 id="org15532e0">Intermediate-scale parallelism</h4>
-<div class="outline-text-4" id="text-org15532e0">
-</div><ul class="org-ul"><li><a id="org96e5c8f"></a>Things too big to fit in a single Python process/cell<br /><p>
+<h4 id="org70a28d4">Intermediate-scale parallelism</h4>
+<div class="outline-text-4" id="text-org70a28d4">
+</div><ul class="org-ul"><li><a id="org50926ec"></a>Things too big to fit in a single Python process/cell<br /><p>
 Say, a handful of columns across a couple billion rows.
 <a href="https://github.com/lsst-sqre/notebook-demo/blob/master/experiments/DASK-notebooks/gaia_all_sky.ipynb">(GAIA DR2, "l" and "b" columns only)</a>
 </p>
@@ -345,14 +345,14 @@ Say, a handful of columns across a couple billion rows.
 </section>
 <section ></li>
 
-<li><a id="orga898a55"></a>But not so big you want to go with full-on HTCondor yet<br /><p>
+<li><a id="orgc32a94d"></a>But not so big you want to go with full-on HTCondor yet<br /><p>
 LSST DR11 final catalog size: 15PB.
 </p>
 
 </section>
 <section ></li>
 
-<li><a id="orga43c7f4"></a>We use Dask<br /><p>
+<li><a id="orgd0353bb"></a>We use Dask<br /><p>
 By the end of the survey, much that we would now use a batch environment
 for will be reasonable in an interactive Dask-like framework.  15PB of
 catalog data?
@@ -361,7 +361,7 @@ catalog data?
 </section>
 <section ></li>
 
-<li><a id="org61323b7"></a>Considerations for using Dask<br /><ul class="org-ul"><li><a id="org32b5eb0"></a>Keeping Python libraries and versions synced<br /><p>
+<li><a id="orgda30384"></a>Considerations for using Dask<br /><ul class="org-ul"><li><a id="org2ffb749"></a>Keeping Python libraries and versions synced<br /><p>
 Use the same container with a <a href="https://github.com/lsst-sqre/nublado/blob/master/jupyterlab/runlab.sh#L135">different environmental flag</a> set to say "be a
 Dask worker, not a JupyterLab server."
 </p>
@@ -374,7 +374,7 @@ compared to our analysis software.
 </section>
 <section ></li>
 
-<li><a id="org3440e0a"></a>Need additional Role/ServiceAccount/Rolebinding to allow Lab to spawn Dask<br /><p>
+<li><a id="orgd590eac"></a>Need additional Role/ServiceAccount/Rolebinding to allow Lab to spawn Dask<br /><p>
 We populate a Dask worker yml document at each login that does the right
 thing.  Modify at your own risk and you're still subject to quotas.
 </p>
@@ -386,18 +386,18 @@ We anticipate very few users will ever need this level of control.
 </section>
 <section ></li>
 
-<li><a id="orgf5b3b3d"></a>Resource limits can cause worker nodes to get reaped<br /><p>
+<li><a id="orga1844d6"></a>Resource limits can cause worker nodes to get reaped<br /><p>
 Some attention to partitioning is still required.
 </p></li></ul></li>
 
-<li><a id="orgf1601fb"></a>Now the user Lab container has to create other containers<br /><p>
+<li><a id="org4017658"></a>Now the user Lab container has to create other containers<br /><p>
 But in the same namespace, so quotas are still easy.
 </p>
 
 </section>
 <section ></li>
 
-<li><a id="orgc7e1829"></a>RBAC<br /><p>
+<li><a id="orgc539d25"></a>RBAC<br /><p>
 It's not that scary.
 </p>
 
@@ -405,17 +405,15 @@ It's not that scary.
 <a href="https://github.com/lsst-sqre/nublado/tree/master/jupyterhub/kubernetes">This is an example</a> for JupyterHub.
 </p></li></ul>
 
-
-
 </section>
 </section>
 <section>
 <section id="slide-sec-">
-<h3 id="org7460cc6">Configuration</h3>
-<div class="outline-text-3" id="text-org7460cc6">
+<h3 id="org70349da">Configuration</h3>
+<div class="outline-text-3" id="text-org70349da">
 </div></section>
 <section id="slide-sec-">
-<h4 id="orgf3268a9">Modularity with ConfigMaps</h4>
+<h4 id="org932d616">Modularity with ConfigMaps</h4>
 <p>
 This is a <a href="https://github.com/lsst-sqre/nublado/blob/master/jupyterhub/jupyterhub_config/jupyterhub_config.py">JupyterHub minimal configuration wrapper</a> that loads the (sorted)
 contents of a configuration directory.
@@ -431,24 +429,24 @@ Make your ConfigMaps generic.
 
 </section>
 <section id="slide-sec-">
-<h4 id="orgc7a21c8">Instance-specific values</h4>
+<h4 id="org00eb3a4">Instance-specific values</h4>
 <p>
 Put them in templated environment, or in Secrets for sensitive data.
 </p>
 
 </section>
 <section id="slide-sec-">
-<h4 id="orge342a1c">Don't be afraid to subclass right in your ConfigMaps</h4>
+<h4 id="org78a3f8a">Don't be afraid to subclass right in your ConfigMaps</h4>
 
 </section>
 </section>
 <section>
 <section id="slide-sec-">
-<h3 id="org85e265c">User Environments</h3>
-<div class="outline-text-3" id="text-org85e265c">
+<h3 id="org3ab7273">User Environments</h3>
+<div class="outline-text-3" id="text-org3ab7273">
 </div></section>
 <section id="slide-sec-">
-<h4 id="orga9434b9">Use a spawner options form to present choices</h4>
+<h4 id="orgcf3de0e">Use a spawner options form to present choices</h4>
 <ul>
 <li>Images</li>
 <li>Container sizes</li>
@@ -462,7 +460,7 @@ You can use groups to control what's displayed.
 
 </section>
 <section id="slide-sec-">
-<h4 id="org4c04c00">Be the User</h4>
+<h4 id="orgaf38884">Be the User</h4>
 <p>
 Pass information into the user container and do user setup as a
 semiprivileged user with tightly controlled sudo.
@@ -480,7 +478,7 @@ Do not give any sudo privileges to the user.
 </section>
 <section >
 
-<ul class="org-ul"><li><a id="orgbac7037"></a>Complex environmental variables<br /><p>
+<ul class="org-ul"><li><a id="orgc1c07cd"></a>Complex environmental variables<br /><p>
 Set up gid/groupname mappings, uid/username, and parse in the shell on
 the far end&#x2026;
 </p>
@@ -489,7 +487,7 @@ the far end&#x2026;
 This is what we've been doing, and we've found we need to&#x2026;
 </p>
 
-<ul class="org-ul"><li><a id="orgd648009"></a>base64-encode the really complicated stuff<br /><p>
+<ul class="org-ul"><li><a id="org1196a22"></a>base64-encode the really complicated stuff<br /><p>
 <a href="https://github.com/lsst-sqre/nublado/blob/master/jupyterhub/sample_configs/20-spawner.py#L395">Here</a> is how we do our initial Dask container template setup.
 </p>
 
@@ -500,20 +498,20 @@ This gets silly fast.  Instead try:
 </section>
 <section ></li></ul></li>
 
-<li><a id="orgc29f53c"></a>ConfigMaps<br /><p>
+<li><a id="org0ba11d6"></a>ConfigMaps<br /><p>
 Define ConfigMaps (which are namespaced) at spawn time and map them into
 the user's Lab container as read-only files.
 </p></li></ul>
 
 </section>
 <section id="slide-sec-">
-<h4 id="orgdd7611c">Persistent Storage</h4>
+<h4 id="orge6ea695">Persistent Storage</h4>
 <p>
 You just need a consistent and persistent way to assign uids/gids.
 </p>
 
 <p>
-Your LDAP system should already this.  GitHub has unique 32-bit
+Your LDAP system should already do this.  GitHub has unique 32-bit
 identifiers for users and groups.  Google will require you to map 64-bit
 IDs to 32-bit.
 </p>
@@ -521,7 +519,7 @@ IDs to 32-bit.
 </section>
 <section >
 
-<ul class="org-ul"><li><a id="orgdf060d5"></a>Access Control is now a solved problem<br /><p>
+<ul class="org-ul"><li><a id="orga08cf23"></a>Access Control is now a solved problem<br /><p>
 You can use POSIX ACLs if there's something good old file permissions
 can't handle.
 </p>
@@ -529,7 +527,7 @@ can't handle.
 </section>
 <section ></li>
 
-<li><a id="org469f650"></a>NFS<br /><p>
+<li><a id="orgb5cae84"></a>NFS<br /><p>
 Works, ubiquitous, <span class="underline">but</span>&#x2026;
 </p>
 
@@ -543,7 +541,7 @@ Works, ubiquitous, <span class="underline">but</span>&#x2026;
 </section>
 <section ></li>
 
-<li><a id="org561eb0b"></a>HostPath<br /><p>
+<li><a id="org2af76da"></a>HostPath<br /><p>
 "Get out of jail free."
 </p>
 
@@ -558,7 +556,23 @@ Works, ubiquitous, <span class="underline">but</span>&#x2026;
 </section>
 <section>
 <section id="slide-sec-">
-<h2 id="org6b2b445">Questions</h2>
+<h2 id="org884bc0a">Questions</h2>
+<p>
+<a href="https://github.com/lsst-sqre/Jupyter-PCW-2019.git">This talk</a>: <a href="https://github.com/lsst-sqre/Jupyter-PCW-2019.git">https://github.com/lsst-sqre/Jupyter-PCW-2019.git</a>.
+</p>
+
+<p>
+<a href="https://athornton.github.io/Jupyter-PCW-2019">This talk, rendered</a>: <a href="https://athornton.github.io/Jupyter-PCW-2019">https://athornton.github.io/Jupyter-PCW-2019</a>.
+</p>
+
+<p>
+The <a href="https://github.com/lsst-sqre/nublado.git">Notebook Aspect of the LSST Science Platform</a>:
+<a href="https://github.com/lsst-sqre/nublado.git">https://github.com/lsst-sqre/nublado.git</a> (example sources).
+</p>
+
+<p>
+Adam Thornton &lt;athornton@lsst.org&gt;
+</p>
 </section>
 </section>
 </div>
