--- a/LBL-Jupyter-talk.html
+++ b/LBL-Jupyter-talk.html
@@ -27,11 +27,11 @@
 <body>
 <div class="reveal">
 <div class="slides">
-<section id="sec-title-slide"><h1 class="title">Tech Dive: Jupyter at LSST</h1><h2 class="author">Adam Thornton</h2><p class="date">Created: 2019-06-02 Sun 12:19</p>
+<section id="sec-title-slide"><h1 class="title">Tech Dive: Jupyter at LSST</h1><h2 class="author">Adam Thornton</h2><p class="date">Created: 2019-06-06 Thu 15:15</p>
 </section>
 <section>
 <section id="slide-sec-">
-<h2 id="orga2aa4ed">Links</h2>
+<h2 id="org70edb44">Links</h2>
 <p>
 <a href="https://github.com/lsst-sqre/Jupyter-PCW-2019.git">This talk</a>: <a href="https://github.com/lsst-sqre/Jupyter-PCW-2019.git">https://github.com/lsst-sqre/Jupyter-PCW-2019.git</a>.
 </p>
@@ -49,13 +49,13 @@ The <a href="https://github.com/lsst-sqre/nublado.git">Notebook Aspect of the LS
 </section>
 <section>
 <section id="slide-sec-">
-<h2 id="org49d873d">LSST</h2>
-<div class="outline-text-2" id="text-org49d873d">
+<h2 id="orgd605782">LSST</h2>
+<div class="outline-text-2" id="text-orgd605782">
 </div></section>
 </section>
 <section>
 <section id="slide-sec-">
-<h3 id="org363bbfa">Feeds and Speeds</h3>
+<h3 id="org0368062">Feeds and Speeds</h3>
 <p>
 <a href="https://www.lsst.org/scientists/keynumbers">This</a> is the usual overview of what the LSST is going to be doing, and
 how much of it there is.
@@ -65,7 +65,7 @@ how much of it there is.
 </section>
 <section>
 <section id="slide-sec-">
-<h3 id="org0bad003">Notebook Environment (AKA "nublado")</h3>
+<h3 id="org89a8428">Notebook Environment (AKA "nublado")</h3>
 <p>
 This is the LSST Science Platform Interactive Notebook Component.
 Basically, it's a way of letting scientists quickly iterate through
@@ -81,13 +81,13 @@ so myself.
 </section>
 <section>
 <section id="slide-sec-">
-<h2 id="orgfd8d18f">Fundamental assumptions</h2>
-<div class="outline-text-2" id="text-orgfd8d18f">
+<h2 id="org8ea80e0">Fundamental assumptions</h2>
+<div class="outline-text-2" id="text-org8ea80e0">
 </div></section>
 </section>
 <section>
 <section id="slide-sec-">
-<h3 id="orga9e01cb">Kubernetes is the right level of abstraction</h3>
+<h3 id="orgefa68bb">Kubernetes is the right level of abstraction</h3>
 <p>
 You're free to argue with me about this.
 </p>
@@ -98,7 +98,7 @@ If you do, you're wrong.
 
 </section>
 <section id="slide-sec-">
-<h4 id="org095b32f">Containerization</h4>
+<h4 id="org953a678">Containerization</h4>
 <p>
 Abstraction that lets you care about the application software rather
 than the lower layers.
@@ -110,7 +110,7 @@ We're using Docker.
 
 </section>
 <section id="slide-sec-">
-<h4 id="org4e3b3a2">Composability</h4>
+<h4 id="orgcadefcf">Composability</h4>
 <p>
 Kubernetes abstractions (e.g. the service) are designed such that we can
 load-balance and (in some cases) get HA without having to work very hard
@@ -125,9 +125,9 @@ This is where Kubernetes is magnificent.
 
 </section>
 <section id="slide-sec-">
-<h4 id="org4608a9f">Ubiquity</h4>
-<div class="outline-text-4" id="text-org4608a9f">
-</div><ul class="org-ul"><li><a id="orgb4c0f18"></a>If you are not a data center service provider<br /><p>
+<h4 id="org3215d45">Ubiquity</h4>
+<div class="outline-text-4" id="text-org3215d45">
+</div><ul class="org-ul"><li><a id="org5039f06"></a>If you are not a data center service provider<br /><p>
 Demand your service provider give you a Kubernetes interface.  The major
 public clouds already do.
 </p>
@@ -136,7 +136,7 @@ public clouds already do.
 </section>
 <section ></li>
 
-<li><a id="org545825e"></a>If you are a data center service provider<br /><p>
+<li><a id="org1bcf231"></a>If you are a data center service provider<br /><p>
 You either already do provide a managed Kubernetes service or you're
 going to have to.  The longer you wait the more it will hurt.
 </p>
@@ -147,7 +147,7 @@ Again, you can argue with me.  Again, you're wrong.
 
 </section>
 <section id="slide-sec-">
-<h4 id="org9f95633">Orchestrateable</h4>
+<h4 id="orgacae056">Orchestrateable</h4>
 <p>
 Kustomize, Terraform, Helm, or roll-your own.  Each of the first three
 has advantages.
@@ -157,7 +157,7 @@ has advantages.
 </section>
 <section>
 <section id="slide-sec-">
-<h3 id="org9042752">JupyterHub</h3>
+<h3 id="org9a8ae05">JupyterHub</h3>
 <p>
 Why write your own spawner?  I haven't heard a convincing reason.
 </p>
@@ -166,7 +166,7 @@ Why write your own spawner?  I haven't heard a convincing reason.
 </section>
 <section>
 <section id="slide-sec-">
-<h3 id="orgb2ef7d3">JupyterLab</h3>
+<h3 id="org08c810d">JupyterLab</h3>
 <p>
 No sense in starting, several years from Science First Light, with
 something that's already being supplanted.
@@ -182,7 +182,7 @@ for.  Encourage them to write those extensions or at least open issues.
 </section>
 <section>
 <section id="slide-sec-">
-<h2 id="orgf19429a">Jupyter Configuration</h2>
+<h2 id="org5680199">Jupyter Configuration</h2>
 <ol>
 <li>Authentication</li>
 <li>Resource Control</li>
@@ -195,11 +195,11 @@ for.  Encourage them to write those extensions or at least open issues.
 </section>
 <section>
 <section id="slide-sec-">
-<h3 id="org63b99a6">Authentication</h3>
-<div class="outline-text-3" id="text-org63b99a6">
+<h3 id="org823cfd5">Authentication</h3>
+<div class="outline-text-3" id="text-org823cfd5">
 </div></section>
 <section id="slide-sec-">
-<h4 id="org2798905">Make it someone else's problem</h4>
+<h4 id="orgadbcef6">Make it someone else's problem</h4>
 <p>
 It's full of corner cases and harder than it looks.
 </p>
@@ -211,7 +211,7 @@ groups, and groups map to capabilities" won't work for you?
 
 </section>
 <section id="slide-sec-">
-<h4 id="orgc1eceb3">OAuth2 is nice</h4>
+<h4 id="org28fce07">OAuth2 is nice</h4>
 <p>
 Wide support, good JupyterHub support, easy to add new providers.
 </p>
@@ -222,7 +222,7 @@ Wide support, good JupyterHub support, easy to add new providers.
 
 </section>
 <section id="slide-sec-">
-<h4 id="org5b95f20">SSO</h4>
+<h4 id="orgeecede8">SSO</h4>
 <p>
 Custom header checking/injection in an Nginx ingress with a diversion
 through OAuth2 flow, followed by passing around JWT.
@@ -232,9 +232,13 @@ through OAuth2 flow, followed by passing around JWT.
 Our <a href="https://github.com/lsst-sqre/nublado/blob/master/proxy/kubernetes/ingress.template.yml#L11">ingress annotations</a> and <a href="https://github.com/lsst-sqre/nublado/blob/master/jupyterhub/sample_configs/10-authenticator.py#L315">header validation and parsing</a>.
 </p>
 
+<p>
+Note that Node.js has a default maximum header size of 8KB.
+</p>
+
 </section>
 <section id="slide-sec-">
-<h4 id="orgd037ec7">Better SSO</h4>
+<h4 id="orgba998e2">Better SSO</h4>
 <p>
 CILogon+NCSA IDP supports association of identities, which is a nice
 feature.  See if your OAuth2 provider can do it.
@@ -249,11 +253,11 @@ logging on somewhere.
 </section>
 <section>
 <section id="slide-sec-">
-<h3 id="orgcf74cbc">Resource Control</h3>
-<div class="outline-text-3" id="text-orgcf74cbc">
+<h3 id="org63dc7d6">Resource Control</h3>
+<div class="outline-text-3" id="text-org63dc7d6">
 </div></section>
 <section id="slide-sec-">
-<h4 id="orgb9f8cb4">Group Membership</h4>
+<h4 id="org1d2a260">Group Membership</h4>
 <p>
 A group is really a mapping to a set of capabilities.
 </p>
@@ -265,7 +269,7 @@ multiple group memberships for an identity.
 
 </section>
 <section id="slide-sec-">
-<h4 id="org4c63212">Capabilities are equivalent to resource entitlement</h4>
+<h4 id="orge35074a">Capabilities are equivalent to resource entitlement</h4>
 <p>
 What a user is allowed to do is the union of the capabilities of each of
 their groups.
@@ -273,9 +277,9 @@ their groups.
 
 </section>
 <section id="slide-sec-">
-<h4 id="orgf24e72e">Namespace a user's resources in Kubernetes</h4>
-<div class="outline-text-4" id="text-orgf24e72e">
-</div><ul class="org-ul"><li><a id="org463eca3"></a>Quotas<br /><p>
+<h4 id="org4392c82">Namespace a user's resources in Kubernetes</h4>
+<div class="outline-text-4" id="text-org4392c82">
+</div><ul class="org-ul"><li><a id="org07bde5e"></a>Quotas<br /><p>
 CPU, RAM, and object count.
 </p>
 
@@ -286,7 +290,7 @@ Construct different quotas for different groups.
 </section>
 <section ></li>
 
-<li><a id="org6726206"></a>Ease of cleanup<br /><p>
+<li><a id="org2f30639"></a>Ease of cleanup<br /><p>
 Once you start constructing complex user environments, it's easy to
 leak.
 </p>
@@ -298,7 +302,7 @@ everything but PVs.
 
 </section>
 <section id="slide-sec-">
-<h4 id="orgb3aed42">Time is a resource</h4>
+<h4 id="org2e637b0">Time is a resource</h4>
 <p>
 If you have a complex set of analysis tools, your images may be very
 large.  Ours are 16GB now.
@@ -311,7 +315,7 @@ This can take a very long time to pull.
 </section>
 <section >
 
-<ul class="org-ul"><li><a id="org786d956"></a>Prepuller<br /><p>
+<ul class="org-ul"><li><a id="orgb55d48f"></a>Prepuller<br /><p>
 Run <a href="https://github.com/lsst-sqre/nublado/tree/master/prepuller">something</a> to continually pull some set of versions of your standard
 images.  Couple with a CI system and by the time people show up in the
 morning, the new image is pulled.
@@ -324,7 +328,7 @@ Cuts startup time from 10 minutes to 15 seconds for us.
 </section>
 <section ></li>
 
-<li><a id="orgd801a61"></a>Build around your stack<br /><p>
+<li><a id="org6d408bb"></a>Build around your stack<br /><p>
 Don't take a base JupyterLab and add your software to it if your
 software is large.
 </p>
@@ -335,9 +339,9 @@ Instead, add JupyterLab to your software.
 
 </section>
 <section id="slide-sec-">
-<h4 id="org4976ca2">Intermediate-scale parallelism</h4>
-<div class="outline-text-4" id="text-org4976ca2">
-</div><ul class="org-ul"><li><a id="org8143624"></a>Things too big to fit in a single Python process/cell<br /><p>
+<h4 id="org6e3baf5">Intermediate-scale parallelism</h4>
+<div class="outline-text-4" id="text-org6e3baf5">
+</div><ul class="org-ul"><li><a id="orga50160a"></a>Things too big to fit in a single Python process/cell<br /><p>
 Say, a handful of columns across a couple billion rows.
 <a href="https://github.com/lsst-sqre/notebook-demo/blob/master/experiments/DASK-notebooks/gaia_all_sky.ipynb">(GAIA DR2, "l" and "b" columns only)</a>
 </p>
@@ -345,14 +349,14 @@ Say, a handful of columns across a couple billion rows.
 </section>
 <section ></li>
 
-<li><a id="orgd51dcd9"></a>But not so big you want to go with full-on HTCondor yet<br /><p>
+<li><a id="orgc7ec8f1"></a>But not so big you want to go with full-on HTCondor yet<br /><p>
 LSST DR11 final catalog size: 15PB.
 </p>
 
 </section>
 <section ></li>
 
-<li><a id="orgdeee1ce"></a>We use Dask<br /><p>
+<li><a id="orge1d49e4"></a>We use Dask<br /><p>
 By the end of the survey, much that we would now use a batch environment
 for will be reasonable in an interactive Dask-like framework.  15PB of
 catalog data?
@@ -361,7 +365,7 @@ catalog data?
 </section>
 <section ></li>
 
-<li><a id="org4233927"></a>Considerations for using Dask<br /><ul class="org-ul"><li><a id="orgc85d5ea"></a>Keeping Python libraries and versions synced<br /><p>
+<li><a id="org61a6dee"></a>Considerations for using Dask<br /><ul class="org-ul"><li><a id="orgb5a2909"></a>Keeping Python libraries and versions synced<br /><p>
 Use the same container with a <a href="https://github.com/lsst-sqre/nublado/blob/master/jupyterlab/runlab.sh#L135">different environmental flag</a> set to say "be a
 Dask worker, not a JupyterLab server."
 </p>
@@ -374,7 +378,7 @@ compared to our analysis software.
 </section>
 <section ></li>
 
-<li><a id="org26d99e7"></a>Need additional Role/ServiceAccount/Rolebinding to allow Lab to spawn Dask<br /><p>
+<li><a id="org5c7f3af"></a>Need additional Role/ServiceAccount/Rolebinding to allow Lab to spawn Dask<br /><p>
 We populate a Dask worker yml document at each login that does the right
 thing.  Modify at your own risk and you're still subject to quotas.
 </p>
@@ -386,18 +390,18 @@ We anticipate very few users will ever need this level of control.
 </section>
 <section ></li>
 
-<li><a id="org23da776"></a>Resource limits can cause worker nodes to get reaped<br /><p>
+<li><a id="org733d738"></a>Resource limits can cause worker nodes to get reaped<br /><p>
 Some attention to partitioning is still required.
 </p></li></ul></li>
 
-<li><a id="org836dc91"></a>Now the user Lab container has to create other containers<br /><p>
+<li><a id="orgffe7137"></a>Now the user Lab container has to create other containers<br /><p>
 But in the same namespace, so quotas are still easy.
 </p>
 
 </section>
 <section ></li>
 
-<li><a id="orgedf0f00"></a>RBAC<br /><p>
+<li><a id="org427bf94"></a>RBAC<br /><p>
 It's not that scary.
 </p>
 
@@ -409,11 +413,11 @@ It's not that scary.
 </section>
 <section>
 <section id="slide-sec-">
-<h3 id="orgacd5931">Configuration</h3>
-<div class="outline-text-3" id="text-orgacd5931">
+<h3 id="orgc2c3bff">Configuration</h3>
+<div class="outline-text-3" id="text-orgc2c3bff">
 </div></section>
 <section id="slide-sec-">
-<h4 id="orgf525889">Modularity with ConfigMaps</h4>
+<h4 id="orgc1f7f19">Modularity with ConfigMaps</h4>
 <p>
 This is a <a href="https://github.com/lsst-sqre/nublado/blob/master/jupyterhub/jupyterhub_config/jupyterhub_config.py">JupyterHub minimal configuration wrapper</a> that loads the (sorted)
 contents of a configuration directory.
@@ -429,24 +433,24 @@ Make your ConfigMaps generic.
 
 </section>
 <section id="slide-sec-">
-<h4 id="org50d21cc">Instance-specific values</h4>
+<h4 id="orgee3aedf">Instance-specific values</h4>
 <p>
 Put them in templated environment, or in Secrets for sensitive data.
 </p>
 
 </section>
 <section id="slide-sec-">
-<h4 id="orge7944aa">Don't be afraid to subclass right in your ConfigMaps</h4>
+<h4 id="org1b43430">Don't be afraid to subclass right in your ConfigMaps</h4>
 
 </section>
 </section>
 <section>
 <section id="slide-sec-">
-<h3 id="org38b3319">User Environments</h3>
-<div class="outline-text-3" id="text-org38b3319">
+<h3 id="org5a899ca">User Environments</h3>
+<div class="outline-text-3" id="text-org5a899ca">
 </div></section>
 <section id="slide-sec-">
-<h4 id="org717357c">Use a spawner options form to present choices</h4>
+<h4 id="org9752969">Use a spawner options form to present choices</h4>
 <ul>
 <li>Images</li>
 <li>Container sizes</li>
@@ -460,7 +464,7 @@ You can use groups to control what's displayed.
 
 </section>
 <section id="slide-sec-">
-<h4 id="org1fbfb46">Be the User</h4>
+<h4 id="org500d2e9">Be the User</h4>
 <p>
 Pass information into the user container and do user setup as a
 semiprivileged user with tightly controlled sudo.
@@ -478,7 +482,7 @@ Do not give any sudo privileges to the user.
 </section>
 <section >
 
-<ul class="org-ul"><li><a id="orgfb6a42e"></a>Complex environmental variables<br /><p>
+<ul class="org-ul"><li><a id="org09bb7b5"></a>Complex environmental variables<br /><p>
 Set up gid/groupname mappings, uid/username, and parse in the shell on
 the far end&#x2026;
 </p>
@@ -487,7 +491,7 @@ the far end&#x2026;
 This is what we've been doing, and we've found we need to&#x2026;
 </p>
 
-<ul class="org-ul"><li><a id="org9b669f1"></a>base64-encode the really complicated stuff<br /><p>
+<ul class="org-ul"><li><a id="org37402ad"></a>base64-encode the really complicated stuff<br /><p>
 <a href="https://github.com/lsst-sqre/nublado/blob/master/jupyterhub/sample_configs/20-spawner.py#L395">Here</a> is how we do our initial Dask container template setup.
 </p>
 
@@ -498,14 +502,14 @@ This gets silly fast.  Instead try:
 </section>
 <section ></li></ul></li>
 
-<li><a id="org5e5f53a"></a>ConfigMaps<br /><p>
+<li><a id="orga67d67d"></a>ConfigMaps<br /><p>
 Define ConfigMaps (which are namespaced) at spawn time and map them into
 the user's Lab container as read-only files.
 </p></li></ul>
 
 </section>
 <section id="slide-sec-">
-<h4 id="orgfe5afd8">Persistent Storage</h4>
+<h4 id="org85d8345">Persistent Storage</h4>
 <p>
 You just need a consistent and persistent way to assign uids/gids.
 </p>
@@ -519,7 +523,7 @@ IDs to 32-bit.
 </section>
 <section >
 
-<ul class="org-ul"><li><a id="orgb7eecc5"></a>Access Control is now a solved problem<br /><p>
+<ul class="org-ul"><li><a id="orgc2ce438"></a>Access Control is now a solved problem<br /><p>
 You can use POSIX ACLs if there's something good old file permissions
 can't handle.
 </p>
@@ -527,7 +531,7 @@ can't handle.
 </section>
 <section ></li>
 
-<li><a id="orgc10b80a"></a>NFS<br /><p>
+<li><a id="orga492bba"></a>NFS<br /><p>
 Works, ubiquitous, <span class="underline">but</span>&#x2026;
 </p>
 
@@ -542,7 +546,7 @@ workarounds</li>
 </section>
 <section ></li>
 
-<li><a id="org634ad4c"></a>HostPath<br /><p>
+<li><a id="orgd5ca3c8"></a>HostPath<br /><p>
 "Get out of jail free."
 </p>
 
@@ -557,7 +561,7 @@ workarounds</li>
 </section>
 <section>
 <section id="slide-sec-">
-<h2 id="org1b6f61f">Questions</h2>
+<h2 id="org634e443">Questions</h2>
 <p>
 <a href="https://github.com/lsst-sqre/Jupyter-PCW-2019.git">This talk</a>: <a href="https://github.com/lsst-sqre/Jupyter-PCW-2019.git">https://github.com/lsst-sqre/Jupyter-PCW-2019.git</a>.
 </p>
